issue with z-index

--- a/src/components/productHead/ProductHead.css
+++ b/src/components/productHead/ProductHead.css
@@ -47,7 +47,7 @@
   width: 100%;
   background: rgba(255,255,255, .98);
   transition: 0.5s ease-in-out;
-  z-index: 101;
+  z-index: 10000;
   padding-top: 25px;
 }
 
